[package]
name = "gtk4rs-widget-factory"
version = "0.1.0"
authors = ["Raj <web@arunRaj.in>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
gtk = {git = "https://github.com/gtk-rs/gtk4-rs", package = "gtk4"}
gdk = { git = "https://github.com/gtk-rs/gtk4-rs.git", package = "gdk4" }
